# treee

./: CHANGELOG.md  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/: disp.h  file.h
src/: disp.c  file.c  main.c  main.cc
src/treee/: disp.cc  disp.h  git.cc  git.h  ncurses.cc  ncurses.h  root.cc  root.h  settings.h
